Adjusting templates and readmes

--- a/fastapi/templates/index.html
+++ b/fastapi/templates/index.html
@@ -3,7 +3,7 @@
         <title>Churn prediction Demo</title>
     </head>
     <body>
-        <h1>Churn prediction demo - Flask version</h1>
+        <h1>Churn prediction demo - FastAPI version</h1>
 
         <form id="form">
             <label for="credit_score">Credit Score:</label>
